--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@svgdotjs/svg.js": "^3.2.0",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1"
   }
 }
